Fixed a flex-wrap parameter

--- a/worksheet.css
+++ b/worksheet.css
@@ -72,7 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
 }
 
 /* Number Twelve */
